Enhancement: Always show scrollbars to prevent 'jumping'.

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 --------------------------------------------------------------*/
 html
 	{ font-family: 'Tahoma', 'Verdana', 'Segoe', 'sans-serif'; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; 
-	  font-size: 16px !important; }
+	  font-size: 16px !important; overflow-y: scroll; }
 	
 body
 	{ margin: 0; font-size: 16px !important; }
